--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    
+
     <section class="banner">
         <div class="edit">
 
@@ -38,11 +38,31 @@
                 href="https://www.google.com/search?q=messi+life+story&rlz=1C1YTUH_en&oq=messi+life&aqs=chrome.1.69i57j0i19l9.10302j0j7&sourceid=chrome&ie=UTF-8">here
                 me</a>
         </div>
-        <div class="design"><img src="51RXpOuABqL.jpg" alt="">
-
-
+        <div class="design">
+            <img src="51RXpOuABqL.jpg" alt="">
         </div>
     </section>
+
+    <section id="second">
+        <div id="one">
+            <img src="51RXpOuABqL.jpg" alt="">
+        </div>
+        <div id="two">
+            <h1 id="five">
+                <bold><span id="fore">welcome to</span> 2022 world-cup</bold>
+            </h1>
+            <h1 id="three">my personal project</h1>
+            <h3>catar worldcup 2022</h3>
+            <p>Type START and send SMS to 24000 Reactivation process through USSD: Dial *24000# from handset Select
+                option 1 for Welcome Tune Press the number to activate your Welcome Tune To Randomize Your Welcome Tune
+                Gallery Randomize through SMS: Go to message option of the handset Type RANDOM & send SMS to 24000
+                Randomize through USSD:-</p>
+            <a id="six" target="_blank"
+                href="https://www.google.com/search?q=messi+life+story&rlz=1C1YTUH_en&oq=messi+life&aqs=chrome.1.69i57j0i19l9.10302j0j7&sourceid=chrome&ie=UTF-8">here
+                me</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
