--- a/index.html
+++ b/index.html
@@ -53,16 +53,66 @@
             </h1>
             <h1 id="three">my personal project</h1>
             <h3>catar worldcup 2022</h3>
-            <p>Type START and send SMS to 24000 Reactivation process through USSD: Dial *24000# from handset Select
-                option 1 for Welcome Tune Press the number to activate your Welcome Tune To Randomize Your Welcome Tune
-                Gallery Randomize through SMS: Go to message option of the handset Type RANDOM & send SMS to 24000
-                Randomize through USSD:-</p>
+            <p>Type START and send SMS to 24000
+                Reactivation process through USSD:
+
+                Dial *24000# from handset
+                Select option 1 for Welcome Tune
+                Press the number to activate your Welcome Tune
+                To Randomize Your Welcome Tune Gallery
+
+                Randomize through SMS:
+
+                Go to message option of the handset
+                Type RANDOM & send SMS to 24000
+                Randomize through USSD</p>
             <a id="six" target="_blank"
                 href="https://www.google.com/search?q=messi+life+story&rlz=1C1YTUH_en&oq=messi+life&aqs=chrome.1.69i57j0i19l9.10302j0j7&sourceid=chrome&ie=UTF-8">here
                 me</a>
         </div>
     </section>
+    <h1 id="mithu">KATAR-CITY-AREA</h1>
+    <section id="ticket">
+
+        <div class="web" id="online">
+            <h2 class="pen"> <span class="new"> 2022 world-cup</span> ticket</h2>
+            <h2 class="tonmoy">online ticket</h2>
+            <p>Type START and send SMS to 24000
+                Reactivation process through USSD:
+
+                Dial *24000# from handset
+                Select option 1 for Welcome Tune
+                Press the number to activate your Welcome Tune
+                To Randomize Your Welcome Tune Gallery
+
+                Randomize through SMS:
+
+                Go to message option of the handset
+                Type RANDOM & send SMS to 24000
+                Randomize through USSD</p>
+        </div>
+        <div class="developer" id="online">
+            <h2 id="off">2022 world-cup ticket</h2>
+            <h2 id="on">ofline ticket</h2>
+            <p>Type START and send SMS to 24000
+                Reactivation process through USSD:
+
+                Dial *24000# from handset
+                Select option 1 for Welcome Tune
+                Press the number to activate your Welcome Tune
+                To Randomize Your Welcome Tune Gallery
+
+                Randomize through SMS:
+
+                Go to message option of the handset
+                Type RANDOM & send SMS to 24000
+                Randomize through USSD</p>
+        </div>
+
+    </section>
 
 </body>
-
+<footer>
+    <p>the end</p>
+</footer>
 </html>
